<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:lineSpacingMultiplier="1.2"
        android:textColor="@color/primary_text_default_material_light"
        android:text="@string/no_friends_on_eh"
    />

    <TextView
        android:id="@+id/invite_button"
        style="@style/EHButtonCTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/invite_friends"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:paddingTop="20dp"
        android:fontFamily="sans-serif-light"
        android:drawableLeft="@drawable/ic_info_black_24dp"
        android:drawableStart="@drawable/ic_info_black_24dp"
        android:drawablePadding="4dp"
        android:text="@string/no_friends_disclaimer"
    />

</LinearLayout>
