<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:gravity="center_horizontal"
    android:background="@android:color/white"
>
    <TextView
        style="@style/RateText"
        android:id="@+id/rate_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:padding="8dp"
        android:text="@string/pref_title_rate_us"
        android:drawableEnd="@drawable/com_facebook_close"
        android:clickable="true"
    />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray600"
    />

    <TextView
        style="@style/RateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="2dp"
        android:paddingTop="24dp"
        android:paddingBottom="8dp"
        android:text="@string/rate_app_text"
    />

    <LinearLayout
        android:paddingBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_rate_24dp"
            tools:ignore="ContentDescription"
        />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_rate_24dp"
            tools:ignore="ContentDescription"
        />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_rate_24dp"
            tools:ignore="ContentDescription"
        />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_rate_24dp"
            tools:ignore="ContentDescription"
        />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_rate_24dp"
            tools:ignore="ContentDescription"
        />
    </LinearLayout>

    <TextView
        style="@style/EHButtonCTA"
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/rate_now"
    />

    <TextView style="@style/RateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="2dp"
        android:padding="8dp"
        android:text="@string/feedback_text"
    />

    <TextView
        style="@style/EHButton"
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="9dp"
        android:background="#E0E0E0"
        android:text="@string/feedback"
    />

</LinearLayout>
