<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray200"
    android:layout_height="match_parent"
    tools:context=".activity.SelectInterestsActivity">

    <ProgressBar
        android:id="@+id/top_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-4dp"
        android:layout_marginTop="-4dp"
        android:indeterminate="true"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@color/primary"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:layout_marginTop="42dp"
        android:textColor="@android:color/white"
        android:text="@string/personalize_exp_text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/white"
        android:text="@string/personalize_message" />
    </LinearLayout>
    <ExpandableListView
        android:id="@+id/categories_list"
        android:layout_height="match_parent"
        android:layout_marginTop="144dp"
        android:layout_marginLeft="10dp"
        android:elevation="4dp"
        android:background="@android:color/white"
        android:layout_marginRight="10dp"
        android:paddingBottom="48dp"
        android:clipToPadding="false"
        android:layout_width="match_parent"/>

    <TextView
        android:id="@+id/done_btn"
        android:background="@drawable/eh_button_done"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/action_done"
        android:onClick="doneClicked"
        android:textSize="16sp"
        android:elevation="4dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@android:color/white"
        tools:visibility="visible"
        tools:ignore="UnusedAttribute"
        />
    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/toolbar" />


</FrameLayout>