<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways" />

        <ProgressBar
            android:id="@+id/top_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-4dp"
            android:indeterminate="true"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/eh_logo"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_launcher"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/name_hint"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="Enter the referral code of the friend who referred you EventsHigh app."
                android:textSize="18sp"
                tools:ignore="HardcodedText,SmallSp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/referral_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_no"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ui_enter_referral_code"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:id="@+id/skip_code"
                    style="@style/EHButtonCTA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|right"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/action_skip"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/send_code"
                    style="@style/EHButtonCTA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|right"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/action_submit" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verify_phn_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_verify"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="Your phone number is not verified."
                android:textColor="#555555"
                android:textIsSelectable="false" />

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="Please verify your phone number to enter the referral code."
                android:textColor="#555555"
                android:textIsSelectable="false"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/verify_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/eh_button_done"
                android:elevation="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="Verify"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:ignore="UnusedAttribute"
                tools:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>